--- a/src/app/features/components/product-item/product-item.component.html
+++ b/src/app/features/components/product-item/product-item.component.html
@@ -1,12 +1,12 @@
-<div >
+<div>
     <div class="product-img">
         <img [src]="product.ProductImg" alt="">
     </div>
     <div class="product-info">
-        <p class="product-title" >
+        <p class="product-title">
             {{product.ProductName}}
         </p>
-      
+
         <h4>
             $<span>{{product.ProductPrice}}.00</span>
         </h4>
@@ -27,10 +27,9 @@
                     {{product.rating}}
                 </span>
             </div>
-            <button >
+            <button>
                 <i class="far fa-heart"></i>
-
-                Watch
+                add to cart
             </button>
         </div>
     </div>
