--- a/src/app/features/components/order-details/order-details.component.scss
+++ b/src/app/features/components/order-details/order-details.component.scss
@@ -20,10 +20,16 @@
 
 .products-table {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 0.5rem;
     border-top: 1px solid #ddd;
     padding-top: 1rem;
+
+    .product-img{
+        width: 45px;
+        height: 45px;
+        border-radius: 8px;
+    }
 }
 
 .product-header {
