add some layout enhancements

--- a/src/app/features/components/layout-wrapper/layout-wrapper.component.scss
+++ b/src/app/features/components/layout-wrapper/layout-wrapper.component.scss
@@ -54,7 +54,7 @@
             input[type='checkbox'] {
 
 
-                background: #56D9D9;
+                background: #2264D1;
                 border-radius: 2px;
             }
 
