--- a/src/app/features/components/product-item/product-item.component.html
+++ b/src/app/features/components/product-item/product-item.component.html
@@ -3,30 +3,21 @@
         <img [src]="product.ProductImg" alt="">
     </div>
     <div class="product-info">
-        <p class="product-title">
+        <h4 class="product-title">
             {{product.ProductName}}
-        </p>
-
-        <h4>
-            $<span>{{product.ProductPrice}}.00</span>
         </h4>
 
-        <p class="description">
-            {{product.description}}
+        <p class="product-price">
+            <span>{{product.ProductPrice | currency}}</span>
+
+            <span>
+                <i class="lnr lnr-sync"></i>
+                {{product.AvailablePieces}}
+            </span>
         </p>
 
-        <div class="wish-list-wrapper">
-            <div class="rate">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
 
-                <span class="rate-number">
-                    {{product.rating}}
-                </span>
-            </div>
+        <div class="wish-list-wrapper">
             <button>
                 <i class="far fa-heart"></i>
                 add to cart
