--- a/src/app/features/components/product-item/product-item.component.scss
+++ b/src/app/features/components/product-item/product-item.component.scss
@@ -11,3 +11,10 @@
     color: #FB8200;
   }
 }
+
+.product-price{
+  display: flex;
+    justify-content: space-between;
+    color: #3873d6;
+    font-size: 1rem !important;
+}
