--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -10,7 +10,7 @@ header {
   // box-shadow: 0px 1px 2px #888888;
 
   .container {
-    // background-color: #56D9D9;
+    // background-color: #2264D1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -111,7 +111,7 @@ header {
               right: 25%;
               top: 25%;
               bottom: 25%;
-              background: linear-gradient(26.57deg, #56D9D9 8.33%, #56D9D9 91.67%);
+              background: linear-gradient(26.57deg, #2264D1 8.33%, #2264D1 91.67%);
               /* Shadow/sm */
               box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
               border-radius: 50%;
